# OS_remote

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  data.h  task1.cpp  task1.h  task2.cpp  task2.h
lab2/: CMakeLists.txt  task1.cpp  task_2_client_side.cpp  task_2_server_side.cpp
lab3/: CMakeLists.txt  task1.cpp  task2.cpp
lab3/non-project files/: Stuken_lab3_2307_1.docx
lab4/: CMakeLists.txt  task1_dispatcher.cpp  task1_reader.cpp  task1_writer.cpp  task2_client.cpp  task2_server.cpp  utils.h
lab4/non-project files/: Trofimov_2307_lab4.docx
lab4/task1_logs/: reader_0.txt  reader_1.txt  reader_2.txt  reader_3.txt  reader_4.txt  reader_5.txt  reader_6.txt  writer_0.txt  writer_1.txt  writer_2.txt  writer_3.txt  writer_4.txt  writer_5.txt  writer_6.txt
non-project files/lab1/: OS_lab_1_1.rar  notes.txt
non-project files/lab1/OS_lab_1_1/OS_lab_1.1/: CMakeLists.txt  directory_func.h  diretory_func.cpp  main.cpp
non-project files/lab2/: OC_Stuken_2307_lab2.docx
